--- a/index.html
+++ b/index.html
@@ -329,7 +329,8 @@
             <!-- === Works === -->
             <section class="works">
                 <article class="projects">
-                    <h1 class="title">My Projects</h1>
+                        <h1 class="title" style="margin-bottom: 1rem;">My Projects</h1>
+                        <h2 class="title">in reverse chronological order</h2>
                     <div class="projects__items flex-nowrap">
                         <div class="project">
                             <div class="project__left-side">
