--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                                 </div>
                                 <a href="https://leshista.github.io/Portfolio/" class="project__title"><p>Portfolio</p></a>
                                 <div class="project__github-logo">
-                                    <a href="https://github.com/Leshista/Portfolio"><img src="img/github.png" alt="Github Link"></a>
+                                    <a href="https://github.com/Leshista/Portfolio"><img src="img/github-white.png" alt="Github Link"></a>
                                 </div>
                             </div>
                             <div class="project__right-side">
