--- a/index.html
+++ b/index.html
@@ -329,9 +329,46 @@
             <!-- === Works === -->
             <section class="works">
                 <article class="projects">
-                        <h1 class="title" style="margin-bottom: 1rem;">My Projects</h1>
-                        <h2 class="title">in reverse chronological order</h2>
+                        <h1 class="title" style="margin-bottom: 4rem;">My Projects</h1>
                     <div class="projects__items">
+                        <div class="project">
+                            <div class="project__left-side">
+                                <div class="project__logo">
+                                    <a href="https://leshista.github.io/Portfolio/">
+                                        <img src="img/result.jpg" alt="Project" class="rounded-a-little" />
+                                    </a>
+                                </div>
+                                <a href="https://leshista.github.io/Portfolio/" class="project__title"><p>Portfolio</p></a>
+                                <div class="project__github-logo">
+                                    <a href="https://github.com/Leshista/Portfolio"><img src="img/github-white.png" alt="Github Link"></a>
+                                </div>
+                            </div>
+                            <div class="project__right-side">
+                                <h2 class="title">Languages used:</h2>
+                                <p class="project__technologies">HTML5, CSS, JavaScript ES6</p>
+                                <h2 class="title">Technologies used:</h2>
+                                <p class="project__technologies">SCSS, VSCode, Git, GitHub, Photopea</p>
+                            </div>
+                        </div>
+                        <div class="project">
+                            <div class="project__left-side">
+                                <div class="project__logo">
+                                    <a href="https://leshista.github.io/Portfolio/">
+                                        <img src="img/result.jpg" alt="Project" class="rounded-a-little" />
+                                    </a>
+                                </div>
+                                <a href="https://leshista.github.io/Portfolio/" class="project__title"><p>Portfolio</p></a>
+                                <div class="project__github-logo">
+                                    <a href="https://github.com/Leshista/Portfolio"><img src="img/github-white.png" alt="Github Link"></a>
+                                </div>
+                            </div>
+                            <div class="project__right-side">
+                                <h2 class="title">Languages used:</h2>
+                                <p class="project__technologies">HTML5, CSS, JavaScript ES6</p>
+                                <h2 class="title">Technologies used:</h2>
+                                <p class="project__technologies">SCSS, VSCode, Git, GitHub, Photopea</p>
+                            </div>
+                        </div>
                         <div class="project">
                             <div class="project__left-side">
                                 <div class="project__logo">
