--- a/index.html
+++ b/index.html
@@ -344,10 +344,29 @@
                                 </div>
                             </div>
                             <div class="project__right-side">
-                                <h2 class="title">Languages used:</h2>
-                                <p class="project__technologies">HTML5, CSS, JavaScript ES6</p>
-                                <h2 class="title">Technologies used:</h2>
-                                <p class="project__technologies">SCSS, VSCode, Git, GitHub, Photopea</p>
+                                <h2 class="title">Tools Used:</h2>
+                                <p class="project__technologies">HTML5, CSS3, JavaScript ES6, SCSS, VSCode, Git, GitHub, Photopea</p>
+                                <h2 class="title">Implemented Features:</h2>
+                                <p class="project__technologies">Typing animation, Curves, Burger-menu, Responsiveness</p>
+                            </div>
+                        </div>
+                        <div class="project">
+                            <div class="project__left-side">
+                                <div class="project__logo">
+                                    <a href="https://leshista.github.io/CNNStaticCopy/">
+                                        <img src="img/cnn.jpg" alt="Project" class="rounded-a-little" />
+                                    </a>
+                                </div>
+                                <a href="https://leshista.github.io/CNNStaticCopy/" class="project__title"><p>Static CNN Main Page</p></a>
+                                <div class="project__github-logo">
+                                    <a href="https://github.com/Leshista/CNNStaticCopy"><img src="img/github-white.png" alt="Github Link"></a>
+                                </div>
+                            </div>
+                            <div class="project__right-side">
+                                <h2 class="title">Tools Used:</h2>
+                                <p class="project__technologies">HTML5, CSS3, JavaScript ES6, SCSS, BootStrap, VSCode, Git, GitHub</p>
+                                <h2 class="title">Implemented Features:</h2>
+                                <p class="project__technologies">Burger-menu, Searchbar, Language Selector, BootStrap-grid, Responsiveness</p>
                             </div>
                         </div>
                         <div class="project">
@@ -363,10 +382,10 @@
                                 </div>
                             </div>
                             <div class="project__right-side">
-                                <h2 class="title">Languages used:</h2>
-                                <p class="project__technologies">HTML5, CSS, JavaScript ES6</p>
-                                <h2 class="title">Technologies used:</h2>
-                                <p class="project__technologies">SCSS, VSCode, Git, GitHub, Photopea</p>
+                                <h2 class="title">Tools Used:</h2>
+                                <p class="project__technologies">HTML5, CSS3, JavaScript ES6, SCSS, VSCode, Git, GitHub, Photopea</p>
+                                <h2 class="title">Implemented Features:</h2>
+                                <p class="project__technologies">Typing animation, Curves, Burger-menu, Responsiveness</p>
                             </div>
                         </div>
                         <div class="project">
@@ -382,29 +401,10 @@
                                 </div>
                             </div>
                             <div class="project__right-side">
-                                <h2 class="title">Languages used:</h2>
-                                <p class="project__technologies">HTML5, CSS, JavaScript ES6</p>
-                                <h2 class="title">Technologies used:</h2>
-                                <p class="project__technologies">SCSS, VSCode, Git, GitHub, Photopea</p>
-                            </div>
-                        </div>
-                        <div class="project">
-                            <div class="project__left-side">
-                                <div class="project__logo">
-                                    <a href="https://leshista.github.io/Portfolio/">
-                                        <img src="img/result.jpg" alt="Project" class="rounded-a-little" />
-                                    </a>
-                                </div>
-                                <a href="https://leshista.github.io/Portfolio/" class="project__title"><p>Portfolio</p></a>
-                                <div class="project__github-logo">
-                                    <a href="https://github.com/Leshista/Portfolio"><img src="img/github-white.png" alt="Github Link"></a>
-                                </div>
-                            </div>
-                            <div class="project__right-side">
-                                <h2 class="title">Languages used:</h2>
-                                <p class="project__technologies">HTML5, CSS, JavaScript ES6</p>
-                                <h2 class="title">Technologies used:</h2>
-                                <p class="project__technologies">SCSS, VSCode, Git, GitHub, Photopea</p>
+                                <h2 class="title">Tools Used:</h2>
+                                <p class="project__technologies">HTML5, CSS3, JavaScript ES6, SCSS, VSCode, Git, GitHub, Photopea</p>
+                                <h2 class="title">Implemented Features:</h2>
+                                <p class="project__technologies">Typing animation, Curves, Burger-menu, Responsiveness</p>
                             </div>
                         </div>
                     </div>
