Added two more projects

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                             <div class="technology__logo">
                                 <img src="img/bootstrap.png" alt="bootstrap" />
                             </div>
-                            <p class="technology__title">BootStrap</p>
+                            <p class="technology__title">BootStrap5</p>
                         </div>
                         <div class="technology">
                             <div class="technology__logo">
@@ -364,47 +364,47 @@
                             </div>
                             <div class="project__right-side">
                                 <h2 class="title">Tools Used:</h2>
-                                <p class="project__technologies">HTML5, CSS3, JavaScript ES6, SCSS, BootStrap, VSCode, Git, GitHub</p>
+                                <p class="project__technologies">HTML5, CSS3, JavaScript ES6, SCSS, BootStrap5, VSCode, Git, GitHub</p>
                                 <h2 class="title">Implemented Features:</h2>
-                                <p class="project__technologies">Burger-menu, Searchbar, Language Selector, BootStrap-grid, Responsiveness</p>
+                                <p class="project__technologies">Burger-menu, Searchbar, Language Selector, Responsiveness</p>
                             </div>
                         </div>
                         <div class="project">
                             <div class="project__left-side">
                                 <div class="project__logo">
-                                    <a href="https://leshista.github.io/Portfolio/">
-                                        <img src="img/result.jpg" alt="Project" class="rounded-a-little" />
+                                    <a href="https://leshista.github.io/JSGame/">
+                                        <img src="img/jsgame.jpg" alt="Project" class="rounded-a-little" />
                                     </a>
                                 </div>
-                                <a href="https://leshista.github.io/Portfolio/" class="project__title"><p>Portfolio</p></a>
+                                <a href="https://leshista.github.io/JSGame/" class="project__title"><p>Tower Defence Game</p></a>
                                 <div class="project__github-logo">
-                                    <a href="https://github.com/Leshista/Portfolio"><img src="img/github-white.png" alt="Github Link"></a>
+                                    <a href="https://github.com/Leshista/JSGame"><img src="img/github-white.png" alt="Github Link"></a>
                                 </div>
                             </div>
                             <div class="project__right-side">
                                 <h2 class="title">Tools Used:</h2>
                                 <p class="project__technologies">HTML5, CSS3, JavaScript ES6, SCSS, VSCode, Git, GitHub, Photopea</p>
                                 <h2 class="title">Implemented Features:</h2>
-                                <p class="project__technologies">Typing animation, Curves, Burger-menu, Responsiveness</p>
+                                <p class="project__technologies">Background Music, Changing windows, Gameplay: random enemy spawning, walking, defeating enemies & earning gold etc., Responsiveness</p>
                             </div>
                         </div>
                         <div class="project">
                             <div class="project__left-side">
                                 <div class="project__logo">
-                                    <a href="https://leshista.github.io/Portfolio/">
-                                        <img src="img/result.jpg" alt="Project" class="rounded-a-little" />
+                                    <a href="https://leshista.github.io/BootstrapSite/">
+                                        <img src="img/bootstrapsite.jpg" alt="Project" class="rounded-a-little" />
                                     </a>
                                 </div>
-                                <a href="https://leshista.github.io/Portfolio/" class="project__title"><p>Portfolio</p></a>
+                                <a href="https://leshista.github.io/BootstrapSite/" class="project__title"><p>A Simple BootStrap Site</p></a>
                                 <div class="project__github-logo">
-                                    <a href="https://github.com/Leshista/Portfolio"><img src="img/github-white.png" alt="Github Link"></a>
+                                    <a href="https://github.com/Leshista/BootstrapSite"><img src="img/github-white.png" alt="Github Link"></a>
                                 </div>
                             </div>
                             <div class="project__right-side">
                                 <h2 class="title">Tools Used:</h2>
-                                <p class="project__technologies">HTML5, CSS3, JavaScript ES6, SCSS, VSCode, Git, GitHub, Photopea</p>
+                                <p class="project__technologies">HTML5, CSS3, BootStrap5 VSCode, Git, GitHub</p>
                                 <h2 class="title">Implemented Features:</h2>
-                                <p class="project__technologies">Typing animation, Curves, Burger-menu, Responsiveness</p>
+                                <p class="project__technologies">Phone number field, Carousel, Contact Us modal window, Responsiveness </p>
                             </div>
                         </div>
                     </div>
