--- a/index.html
+++ b/index.html
@@ -402,9 +402,47 @@
                             </div>
                             <div class="project__right-side">
                                 <h2 class="title">Tools Used:</h2>
-                                <p class="project__technologies">HTML5, CSS3, BootStrap5 VSCode, Git, GitHub</p>
+                                <p class="project__technologies">HTML5, CSS3, BootStrap5, VSCode, Git, GitHub</p>
                                 <h2 class="title">Implemented Features:</h2>
                                 <p class="project__technologies">Phone number field, Carousel, Contact Us modal window, Responsiveness </p>
+                            </div>
+                        </div>
+                        <div class="project">
+                            <div class="project__left-side">
+                                <div class="project__logo">
+                                    <a href="https://leshista.github.io/FlexBoxSite/">
+                                        <img src="img/gotham.jpg" alt="Project" class="rounded-a-little" />
+                                    </a>
+                                </div>
+                                <a href="https://leshista.github.io/FlexBoxSite/" class="project__title"><p>Index Page of a Blog</p></a>
+                                <div class="project__github-logo">
+                                    <a href="https://github.com/Leshista/FlexBoxSite"><img src="img/github-white.png" alt="Github Link"></a>
+                                </div>
+                            </div>
+                            <div class="project__right-side">
+                                <h2 class="title">Tools Used:</h2>
+                                <p class="project__technologies">HTML5, CSS3, VSCode, Git, GitHub</p>
+                                <h2 class="title">Implemented Features:</h2>
+                                <p class="project__technologies">Several sections with content, Post-like articles, Responsiveness </p>
+                            </div>
+                        </div>
+                        <div class="project">
+                            <div class="project__left-side">
+                                <div class="project__logo">
+                                    <a href="https://leshista.github.io/BasicSite/">
+                                        <img src="img/result.jpg" alt="Project" class="rounded-a-little" />
+                                    </a>
+                                </div>
+                                <a href="https://leshista.github.io/BasicSite/" class="project__title"><p>Kinda Landing Page</p></a>
+                                <div class="project__github-logo">
+                                    <a href="https://github.com/Leshista/BasicSite"><img src="img/github-white.png" alt="Github Link"></a>
+                                </div>
+                            </div>
+                            <div class="project__right-side">
+                                <h2 class="title">Tools Used:</h2>
+                                <p class="project__technologies">HTML5, CSS3, VSCode, Git, GitHub</p>
+                                <h2 class="title">Implemented Features:</h2>
+                                <p class="project__technologies">Beautiful Car, Section with two articles </p>
                             </div>
                         </div>
                     </div>
