Added feature to project

--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
                                 <h2 class="title">Tools Used:</h2>
                                 <p class="project__technologies">HTML5, CSS3, JavaScript ES6, SCSS, VSCode, Git, GitHub, Photopea</p>
                                 <h2 class="title">Implemented Features:</h2>
-                                <p class="project__technologies">Background Music, Changing windows, Gameplay: random enemy spawning, walking, defeating enemies & earning gold etc., Responsiveness</p>
+                                <p class="project__technologies">Background Music, Changing windows, Generating tilemap differently for different devices, Gameplay: random enemy spawning, walking, defeating enemies & earning gold etc., Responsiveness</p>
                             </div>
                         </div>
                         <div class="project">
