Added footer html

--- a/index.html
+++ b/index.html
@@ -463,7 +463,15 @@
             </section>
         </main>
         <!-- ===== FOOTER ===== -->
-        <footer class="footer"></footer>
+        <footer class="footer">
+            <p class="email">a.leshista@gmail.com</p>
+            <section class="links">
+                <a href="https://github.com/Leshista"><img src="img/github-white.png" alt="Github link"></a>
+                <a href="/"><img src="img/linkedin.png" alt="LinkedIn link"></a>
+                <a href="https://t.me/Leshista"><img src="img/tg.png" alt="Telegram link"></a>
+                <a href="https://vk.com/ronald_bross"><img src="img/vk.png" alt="Vkontakte link"></a>
+            </section>
+        </footer>
         <script src="js/script.js"></script>
     </body>
 </html>
