--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                                     <img src="img/result.jpg" alt="Course logo" class="rounded-a-little" />
                                 </a>
                             </div>
-                            <a href="https://www.udemy.com/course/result-oriented-web-developer-course/" class="technology__title"><p>The Result-Oriented</p><p>Web Developer Course</p></a>
+                            <a href="https://www.udemy.com/course/result-oriented-web-developer-course/" class="technology__title"><p>Result-Oriented</p><p>Web Developer Course</p></a>
                             <label for="udemy-progress-bar">Study Progress:</label>
                             <progress id="udemy-progress-bar" max="100" value="85">85%</progress>
                         </div>
@@ -234,7 +234,7 @@
                                     <img src="img/node.jpg" alt="Course logo" class="rounded-a-little" />
                                 </a>
                             </div>
-                            <a href="https://www.udemy.com/course/nodejs-express-mongodb-bootcamp/" class="technology__title"><p>Node.js</p><p>Express, MongoDB & More</p></a>
+                            <a href="https://www.udemy.com/course/nodejs-express-mongodb-bootcamp/" class="technology__title"><p>Node.js</p><p>Express, MongoDB</p></a>
                             <label for="udemy-progress-bar">Study Progress:</label>
                             <progress id="udemy-progress-bar" max="100" value="1">1%</progress>
                         </div>
@@ -300,7 +300,7 @@
                                     <p>По жизни</p></a>
                             </div>
                         </div>
-                        <h1 class="title" style="margin-bottom: 30rem;" >And Many More...</h1>
+                        <h1 class="title" style="margin-bottom: 20rem;" >And Many More...</h1>
                 </article>
                 <div class="whoings__divider-bottom divider-bottom">
                     <svg
