--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
             <div class="name-typing">
                 <!-- Leaving this div empty due to all the content added through ::before pseudo-element -->
             </div>
+            <nav class="nav">
+                <a href="#technologies" class="nav__item">Technologies</a>
+                <a href="#study" class="nav__item">Experience&Study</a>
+                <a href="#projects" class="nav__item">Projects</a>
+            </nav>
             <div class="burger-menu"></div>
         </header>
         <!-- ===== MAIN ===== -->
@@ -92,7 +97,7 @@
                 </div>
             </section>
             <!-- === Doings === -->
-            <section class="doings">
+            <section class="doings" id="technologies">
                 <article class="technologies">
                     <h1 class="title">Languages I Speak</h1>
                     <div class="technologies__items">
@@ -201,7 +206,7 @@
                 </div>
             </section>
             <!-- === Whoings === -->
-            <section class="whoings">
+            <section class="whoings" id="study">
                 <h1 class="title">About My Experience</h1>
                 <p class="text">Since beginning my journey as a frontend developer in Spring 2021, I've studied hard, consumed every bit & byte of necessary knowledge as fast and thoughtul as I could, poured my soul and countless hours into making lovely sites. I'm doing everything I can to become compenent frontend dev ASAP. I'm sure to become valuable member of your team!</p>
                 <h1 class="title">I Gain Knowledge From</h1>
@@ -327,7 +332,7 @@
                 </div>
             </section>
             <!-- === Works === -->
-            <section class="works">
+            <section class="works" id="projects">
                 <article class="projects">
                         <h1 class="title" style="margin-bottom: 4rem;">My Projects</h1>
                     <div class="projects__items">
