--- a/index.html
+++ b/index.html
@@ -39,7 +39,11 @@
                 <a href="#study" class="nav__item">Experience&Study</a>
                 <a href="#projects" class="nav__item">Projects</a>
             </nav>
-            <div class="burger-menu"></div>
+            <div class="burger-menu">
+                <div class="burger-menu__stripe"></div>
+                <div class="burger-menu__stripe"></div>
+                <div class="burger-menu__stripe"></div>
+            </div>
         </header>
         <!-- ===== MAIN ===== -->
         <main class="main">
