Added burger-menu block and made it possible for calling it

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
                 <a href="#study" class="nav__item">Experience&Study</a>
                 <a href="#projects" class="nav__item">Projects</a>
             </nav>
-            <div class="burger-menu">
-                <div class="burger-menu__stripe"></div>
-                <div class="burger-menu__stripe"></div>
-                <div class="burger-menu__stripe"></div>
+            <div class="burger">
+                <div class="burger__stripe"></div>
+                <div class="burger__stripe"></div>
+                <div class="burger__stripe"></div>
             </div>
         </header>
         <!-- ===== MAIN ===== -->
@@ -481,6 +481,9 @@
                 <a href="https://vk.com/ronald_bross"><img src="img/vk.png" alt="Vkontakte link"></a>
             </section>
         </footer>
+        <!-- ===== BURGER-MENU ===== -->
+        <div class="burger-menu hidden">
+        </div>
         <script src="js/script.js"></script>
     </body>
 </html>
