Animation for burger

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <!-- ===== MAIN ===== -->
         <main class="main">
             <!-- === Profile === -->
-            <section class="profile">
+            <section class="profile" id="profile">
                 <!-- Adding curves that were done with the help from this site: https://www.shapedivider.app -->
                 <div class="profile__divider-top divider-top">
                     <svg
@@ -483,6 +483,9 @@
         </footer>
         <!-- ===== BURGER-MENU ===== -->
         <div class="burger-menu hidden">
+            <nav class="burger-menu__nav">
+
+            </nav>
         </div>
         <script src="js/script.js"></script>
     </body>
