Added a convenient up-button

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </head>
     <body>
         <!-- ===== HEADER ===== -->
-        <header class="header">
+        <header class="header" id="header">
             <div class="name-typing">
                 <!-- Leaving this div empty due to all the content added through ::before pseudo-element -->
             </div>
@@ -48,7 +48,7 @@
         <!-- ===== MAIN ===== -->
         <main class="main">
             <!-- === Profile === -->
-            <section class="profile" id="profile">
+            <section class="profile">
                 <!-- Adding curves that were done with the help from this site: https://www.shapedivider.app -->
                 <div class="profile__divider-top divider-top">
                     <svg
@@ -473,6 +473,11 @@
         </main>
         <!-- ===== FOOTER ===== -->
         <footer class="footer">
+            <div class="arrow-up">
+                <a href="#header">
+                    <img src="img/arrow-up.png" alt="arrow-up button">
+                </a>
+            </div>
             <p class="email">a.leshista@gmail.com</p>
             <section class="links">
                 <a href="https://github.com/Leshista"><img src="img/github-white.png" alt="Github link"></a>
