Click on burger-menu__item now hiddens the burger menu

--- a/index.html
+++ b/index.html
@@ -488,8 +488,11 @@
         </footer>
         <!-- ===== BURGER-MENU ===== -->
         <div class="burger-menu hidden">
-            <nav class="burger-menu__nav">
-
+            <nav class="nav">
+                <a href="#header" class="nav__item nav__item_burger">Profile</a>
+                <a href="#technologies" class="nav__item nav__item_burger">Technologies</a>
+                <a href="#study" class="nav__item nav__item_burger">Experience&Study</a>
+                <a href="#projects" class="nav__item nav__item_burger">Projects</a>
             </nav>
         </div>
         <script src="js/script.js"></script>
