Final fixes (I hope)

--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
         <!-- ===== BURGER-MENU ===== -->
         <div class="burger-menu hidden">
             <nav class="nav">
-                <a href="#header" class="nav__item nav__item_burger">Profile</a>
+                <a href="#header" class="nav__item nav__item_burger">About Me</a>
                 <a href="#technologies" class="nav__item nav__item_burger">Technologies</a>
                 <a href="#study" class="nav__item nav__item_burger">Experience&Study</a>
                 <a href="#projects" class="nav__item nav__item_burger">Projects</a>
