Updated picture, languages and projects

--- a/index.html
+++ b/index.html
@@ -78,13 +78,12 @@
                     <!-- <p class="text__motto">Bringing sites to life</p> -->
                     <h1 class="text__name">Stanislav Alyoshin</h1>
                     <p class="text__profession">
-                        <span class="text__to-be">to-be</span> Junior Web
+                        <span class="text__to-be">to-be</span> Junior Front-End
                         Developer
                     </p>
                 </div>
                 <div class="profile__photo photo">
-                    <p class="photo__placeholder">Placeholder</p>
-                    <img src="img/milos.png" alt="Placeholder" />
+                    <img src="img/profile-picture.jpg" alt="Placeholder" />
                 </div>
                 <div class="profile__divider-bottom divider-bottom">
                     <svg
@@ -122,6 +121,10 @@
                                 <img src="img/js.png" alt="JavaScript" />
                             </div>
                             <p class="technology__title">JS ES6</p>
+                        </div>
+                        <div class="technology">
+                            <div class="technology__logo"><img src="img/ts.png" alt="typesctipt"></div>
+                            <p class="technology__title">TypeScript</p>
                         </div>
                     </div>
                 </article>
@@ -188,10 +191,6 @@
                         <div class="technology">
                             <div class="technology__logo fixed-height"><img src="img/mongodb.png" alt="mongodb"></div>
                             <p class="technology__title">MongoDB</p>
-                        </div>
-                        <div class="technology">
-                            <div class="technology__logo fixed-height"><img src="img/ts.png" alt="typesctipt"></div>
-                            <p class="technology__title">TypeScript</p>
                         </div>
                     </div>
                 </article>
@@ -343,8 +342,27 @@
                         <div class="project">
                             <div class="project__left-side">
                                 <div class="project__logo">
+                                    <a href="https://leshista.github.io/ReactToDoList/">
+                                        <img src="img/todo.jpg" alt="Project" class="rounded-a-little" />
+                                    </a>
+                                </div>
+                                <a href="https://leshista.github.io/ReactToDoList/" class="project__title"><p>React To Do List</p></a>
+                                <div class="project__github-logo">
+                                    <a href="https://github.com/Leshista/ReactToDoList"><img src="img/github-white.png" alt="Github Link"></a>
+                                </div>
+                            </div>
+                            <div class="project__right-side">
+                                <h2 class="title">Tools Used:</h2>
+                                <p class="project__technologies">HTML5, CSS3, TypeScript, React, SCSS, VSCode, Git, GitHub</p>
+                                <h2 class="title">Implemented Features:</h2>
+                                <p class="project__technologies">User can add, delete and filter todos, dynamically rendering todos via useState and useEffect</p>
+                            </div>
+                        </div>
+                        <div class="project">
+                            <div class="project__left-side">
+                                <div class="project__logo">
                                     <a href="https://leshista.github.io/Portfolio/">
-                                        <img src="img/result.jpg" alt="Project" class="rounded-a-little" />
+                                        <img src="img/portfolio.jpg" alt="Project" class="rounded-a-little" />
                                     </a>
                                 </div>
                                 <a href="https://leshista.github.io/Portfolio/" class="project__title"><p>Portfolio</p></a>
@@ -385,7 +403,7 @@
                                         <img src="img/jsgame.jpg" alt="Project" class="rounded-a-little" />
                                     </a>
                                 </div>
-                                <a href="https://leshista.github.io/JSGame/" class="project__title"><p>Tower Defence Game</p></a>
+                                <a href="https://leshista.github.io/JSGame/" class="project__title"><p>Unfinished Game, works only if page was loaded on the phone</p></a>
                                 <div class="project__github-logo">
                                     <a href="https://github.com/Leshista/JSGame"><img src="img/github-white.png" alt="Github Link"></a>
                                 </div>
@@ -435,7 +453,7 @@
                                 <p class="project__technologies">Several sections with content, Post-like articles, Responsiveness </p>
                             </div>
                         </div>
-                        <div class="project">
+                        <!-- <div class="project">
                             <div class="project__left-side">
                                 <div class="project__logo">
                                     <a href="https://leshista.github.io/BasicSite/">
@@ -453,7 +471,7 @@
                                 <h2 class="title">Implemented Features:</h2>
                                 <p class="project__technologies">Beautiful Car, Section with two articles </p>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </article>
                 <div class="works__divider-bottom divider-bottom">
