Added a new project

--- a/index.html
+++ b/index.html
@@ -342,6 +342,27 @@
                         <div class="project">
                             <div class="project__left-side">
                                 <div class="project__logo">
+                                    <a href="https://leshista.github.io/infotecs-test/">
+                                        <img src="img/journal.jpg" alt="Project" class="rounded-a-little" />
+                                    </a>
+                                </div>
+                                <a href="https://leshista.github.io/infotecs-test/" class="project__title"><p>Comfy Journal
+
+                                </p></a>
+                                <div class="project__github-logo">
+                                    <a href="https://github.com/Leshista/infotecs-test"><img src="img/github-white.png" alt="Github Link"></a>
+                                </div>
+                            </div>
+                            <div class="project__right-side">
+                                <h2 class="title">Tools Used:</h2>
+                                <p class="project__technologies">HTML5, CSS3, JavaScript, React, SCSS, VSCode, Git, GitHub</p>
+                                <h2 class="title">Implemented Features:</h2>
+                                <p class="project__technologies">A simple ToDo app, where user can add, delete, edit and filter todos</p>
+                            </div>
+                        </div>
+                        <div class="project">
+                            <div class="project__left-side">
+                                <div class="project__logo">
                                     <a href="https://leshista.github.io/ReactToDoList/">
                                         <img src="img/todo.jpg" alt="Project" class="rounded-a-little" />
                                     </a>
@@ -453,7 +474,7 @@
                                 <p class="project__technologies">Several sections with content, Post-like articles, Responsiveness </p>
                             </div>
                         </div>
-                        <!-- <div class="project">
+                        <div class="project">
                             <div class="project__left-side">
                                 <div class="project__logo">
                                     <a href="https://leshista.github.io/BasicSite/">
@@ -471,7 +492,7 @@
                                 <h2 class="title">Implemented Features:</h2>
                                 <p class="project__technologies">Beautiful Car, Section with two articles </p>
                             </div>
-                        </div> -->
+                        </div>
                     </div>
                 </article>
                 <div class="works__divider-bottom divider-bottom">
